@@ -22,12 +22,14 @@ DIST gitlab-ce-9.2.10.tar.gz 30988788 SHA256 a30e9d08d08433713df958d447a76cf2ed1
 DIST gitlab-ce-9.3.10.tar.gz 31765280 SHA256 bda195e39e38428af95c0806bbe28b2667f346a346fe1498b772df9465809163 SHA512 2d248376daa5b10d9232022f78209a6be054290f2470c70df4ce8332428ba0f72461fe7c62ad35460056f2c2dabac73d278f0f65f50a09cf6f72d8d1178a8d26 WHIRLPOOL 87c8ba0086c9da2d3f67d41e3ac36a15b1bcb13df8b2a408eef87797828a0a6fa642b9eac4ba220b178a21687b752227f4a1d61bf204a9f4ac0ead89d2586d0e
 DIST gitlab-ce-9.4.0_rc6.tar.gz 32810524 SHA256 4cd8ae890bbe2b90047078c6d61fd29c8c62e8aa0059d97ca14db81b68ea64f2 SHA512 b8aeaa3f017b47c3455885c57fc21da8fc393ce6258de6813f0c7104f7dc725ffd3800c22d480ed19aa553c7d1040a4006dbd923cb6a1f3cdd685b17ee21afc0 WHIRLPOOL dd583d05f6937612e9a34980c558030bed266f2a0f50a2d9977c23a4cb8fcbfcfc71a3157c846250a02091688333c5b76ccdeec2a9f3e5a23af715caa7d58f05
 DIST gitlab-ce-9.4.5.tar.gz 32848913 SHA256 fe3d686d017de2af5079327af360addf67410b41ab26f2aa2cecce982649807c SHA512 167291086d96445fb9a8fe3b0868ec5884fbfa8fe77f63b048d4b2b79aeaa5fca2279ed9e9374dc0d3f78ae5aabad1d8788aa7e58b50c16e9155c46d061f619d WHIRLPOOL 390fd8f883375d7f47d9870904fe46521f457c5e517c8299875d2bf0a25aae33ac7bec68984c17f6996af7638baf35c5f62a090f57ca16c26f256d4e92b339fd
+DIST gitlab-ce-9.5.3.tar.gz 36190930 SHA256 c04f7e0ee437ef72ab1ca156599a992adb396d8ca91ddb6702b7c93904be5ab0 SHA512 a45b246be1373dbcc9f556e4836ff53fd9fb3c46134e4668de1c6121c214b006da1a15d8e1e4fb4f90b7a235c6c849b0cbc8edf11920bfd43cde50feeda66faf WHIRLPOOL 2c88bbbf10adaed7c182d66e87d1d9c757f5ef99f7d8826d0e137f6b624069d950ce159af06ebd005ab964539120462143b9beb3e993a9f774cf0908d6c40e86
 EBUILD gitlab-ce-9.0.13.ebuild 13146 SHA256 64748b6e753c67ac3c46094a5bd021b13bca05d5dbf5955de6e0796ab8bb43fc SHA512 ba2ad250ef3c35d333d22ae25dd62c05fc53591438bf2f77a6d0ccc8993e53695d8458153bb6e80dcde4b092bc7523909b2d9e3949e640862a3455deaf647b1f WHIRLPOOL 78863ffbb92f592405227209a4980c05cf40e34be35a1198bdd3cba938fa34709ca0af850b4b4735f7aeb54dd3e35b1825233dd32afa2a964524bf7cc2035839
 EBUILD gitlab-ce-9.1.10.ebuild 13302 SHA256 3fc7a2a4e386e49362a4c9abec30799e0a794b9e1636b18b57c988323acc86bc SHA512 de31e302e94df6dbf263aaf4afce12d3260dac06b22b3f48965e4e7687b3be8e831d06ce2d05581acf9c9305dc1b40842e5be0fed2dc7f7948e9836361f82e87 WHIRLPOOL a6599e4d5c77ae0c6f0a8ba71797a20e73747f1cc4d5a43d2b3939efb7dfd59b8c409b17c32ffc39e6c8cee976da77840309c6be4f51f84a3034812c6b481e99
 EBUILD gitlab-ce-9.2.10.ebuild 13047 SHA256 19f794001a59da5c2de341c2f4fa73f69cb11af3139ad1c908f7fedeffe7c5f9 SHA512 df7fe4662cf1c85758d8634b13b14211242115113c37f78bb7ad1196a40243a0420aca3d3548743043a9de8410db1b80192f75c492347928ae0a574ba2abc924 WHIRLPOOL 5f38b97cba750b57c3f9300c8b8a19fa20eb6e82d35e79431ec3f1b91dd16a578776d125962d94ad2d9d34e2a6142fcfe332d6322b60afc975e761bca85591cc
 EBUILD gitlab-ce-9.3.10.ebuild 13706 SHA256 a02bc1d9e5912932663dc896683b63ecdfd44a00945db5d0955ab5ad31b97e04 SHA512 c3490ba8dea6cf7058de0aac62910e7e4c1b125256311fdb0648d2f40555ae408d0db87a7b179d7f53ae823a1c104d42a68eb7c5affdb79ed108d39eb5cf2666 WHIRLPOOL 9627551b7d3439f33e4816d55e3c9be54ebf0905cc57e4b1ad41ab4aed7c156221ee3a11c33636153a9eef4545ef870534b2a7faafd4c7e2cffe8fa6020ab37b
 EBUILD gitlab-ce-9.4.0_rc6.ebuild 13515 SHA256 55d3f521d4b54ae3a8e1730e603cc3699a957bb037d7bb402984c27b68e3ba50 SHA512 b47acf7328fc7396bf4e33b5e5fd147e20a5b4d0ea115518ad3492cac3e8d65e861e3ab961e73779d0bee82a5c08ca04a355e4c547c4504d5881d81f182ba6e4 WHIRLPOOL 47547b6d7368a086aa474cad44a304936a06615406c9c72d899677c2742596a991d9b2e4cb4f7a65a1011db2966b7f21ff0901004e00e4f96cbae8b28018e3bb
 EBUILD gitlab-ce-9.4.5.ebuild 13533 SHA256 c48168a56f787a8ad4f1feca02b6d6ffa72ce093dbea96a43944a26cabeb74be SHA512 6c6d428cbfc2510172cafadb7e96f2328c41e4b884ae97ff18a47de90f95ea0df8b9e19c439b3aab55b9508b74ebb18f0d805ba1c4d98d44fb47e4451784bb67 WHIRLPOOL 6c1ff65d02f671856f5dc95ef7cd4ec7e7b37876d1543942adc66bb25d0f82b7625e9370dd69338eb944b5d5c890ab383490e16d29df34f1ce50c50f4f83fcaa
+EBUILD gitlab-ce-9.5.3.ebuild 13533 SHA256 13cce9472011e86028cfca5e50414188eea7c54b729d29fbde486e0e8d5e3c91 SHA512 632f58d3518ac0a5b6ffafab9e945f3b92d5d1eaf9f73ca153c0ccb9c521cbab311cff4b2494d9cc4de6eb66e6e1d81af0df3e9cc6761654deaa6c1bea4f5f6e WHIRLPOOL b967fa1f66ea8ceef62c11d17685dee79a694a1d8b556216d41fa0b5eb118dd3acb1edff030cddf6abd46864f82224ea10557a537a314832f0147995b83c4fcb
 EBUILD gitlab-ce-9999.ebuild 13475 SHA256 ae6496c7a3fd61c484fed4822631005348ab5d9c05df61ef927ae797753e83c6 SHA512 79f6b2457187f95a52cddcd67643c9b6d4ca72a4f4e52f34849786ff8ac9be32b771504f6cdd7dbaf5de5f77869db75812ff4ea3aeaf2abbdc874e755b627d99 WHIRLPOOL 2fbd6ea7b1013128416c511f2d4eb4f08e087046a8c3dfe60c5b3d5b7ac521d86ab33dba9a62e5bd10b4f5ef0e1d9d3a8cac43a189dca018c6ddb734806d8a76
-MISC ChangeLog 23010 SHA256 098af296bfa9a821af4bd8b722d69d03dab82de49f0123e45bca0c7e52525caf SHA512 9ee0b24eae33d9a3a4f97337b288f4a88bc6e1ced5f75db854cbcbc9519f8954fcadeed1709f7a7cd155694dd818ca6da8337095195f322318b9bb4f1f6e722c WHIRLPOOL 140529c4a0694affbe3514920427cdadc565de32123436a9026431a95575dd429392c69d1df6e4ebf06d21cc1fdd7ffb0ac7c991c3b95f1a98b41d849368f421
+MISC ChangeLog 23172 SHA256 74233c80552a9d05c8388ff5181a4355232ca270fea2cd4f4e179124b7dfb03f SHA512 817f80d29bb65588183fcce6271eaf7c67317c513e29b3e812be17334a902c47161fffc3b2832db13478d4270581cd12a6700ef6a4f50c34f7a3f202cfbce02c WHIRLPOOL 6d36bbfcba26f314eaea8bac6d789a0768d3b20cc4d7fc379df589b89a624658871cff017be75550e82ddfd94d0e74bb5aaab31249113b61c760107d695564c8
 MISC metadata.xml 801 SHA256 3dc7486a12903f47f65968d524c93500ba30a4a09fa57e5a9dacf356509b44bb SHA512 e132754b72e64246531fa883400a0cf1a473ac5a6a49623db58ccf118a038b7cf37df03d9550f37b4a25f9ddbb1dcc5652ec9a4f2259d8e3ce202692c4025f41 WHIRLPOOL e9d961681fd790008eaf80fa07ce2c55a00a58f2e920d759793783ca8c8f508602a777e94c0cb65fe87c7dbef0cabdf26e4f4082584421097d939cbab20c4ac6
